# Haven-FSK

./: .gitignore  BAND_PLAN.md  CHANGELOG.md  CPP_REWRITE.md  HAVEN-FSK_Specification.md  Launch HAVEN-FSK.bat  README.md  THIRD_PARTY_LICENSES.md  fec.py  frame.py  haven_fsk.py  install_and_run.py  log.py  modem.py  requirements.txt  tci.py
cpp/: CLAUDE.md  CMakeLists.txt  CPP_REWRITE.md  DECISIONS.md  RESUME.md  THIRD_PARTY_LICENSES.md  build.bat
cpp/src/: main.cpp
cpp/src/audio/: AudioEngine.cpp  AudioEngine.h  AudioSelfTest.h  AudioSettings.h
cpp/src/dsp/: Constants.h  DCD.cpp  DCD.h  Demodulator.cpp  Demodulator.h  DspPipeline.cpp  DspPipeline.h  FEC.cpp  FEC.h  FecSelfTest.h  Frame.cpp  Frame.h  FrameSelfTest.h  IModem.h  Interleaver.cpp  Interleaver.h  MfskConstants.h  MfskModem.cpp  MfskModem.h  ModemFactory.cpp  ModemFactory.h  Modulator.cpp  Modulator.h  Preamble.cpp  Preamble.h
cpp/src/dsp/psk/: Psk31Constants.h  Psk31Demodulator.cpp  Psk31Demodulator.h  Psk31Modem.cpp  Psk31Modem.h  Psk31Modulator.cpp  Psk31Modulator.h  Psk31SelfTest.h  Psk31VaricodeTable.h  Varicode.cpp  Varicode.h
cpp/src/log/: AdifExporter.cpp  AdifExporter.h  LogEntry.h  LogManager.cpp  LogManager.h
cpp/src/radio/: HamlibClient.cpp  HamlibClient.h  PTTManager.cpp  PTTManager.h  RadioInterface.h  RadioSettings.h  RigctldClient.cpp  RigctldClient.h  TCIClient.cpp  TCIClient.h
cpp/src/ui/: ExportDialog.cpp  ExportDialog.h  FrequencyControl.h  LevelPanel.h  LogPanel.cpp  LogPanel.h  MacroPanel.cpp  MacroPanel.h  MainWindow.cpp  MainWindow.h  RadioConfigDialog.cpp  RadioConfigDialog.h  RxDisplay.cpp  RxDisplay.h  SettingsDialog.cpp  SettingsDialog.h  StationInfoWidget.h  WaterfallWidget.cpp  WaterfallWidget.h
